--- a/Resturants/StroyBoard/Profile.storyboard
+++ b/Resturants/StroyBoard/Profile.storyboard
@@ -4077,7 +4077,7 @@
                                                         </constraints>
                                                     </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="8Ew-7N-Fbp">
-                                                        <rect key="frame" x="24" y="17" width="345" height="228"/>
+                                                        <rect key="frame" x="24" y="17" width="345" height="84"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="LJj-3R-JaS">
                                                                 <rect key="frame" x="0.0" y="0.0" width="345" height="84"/>
@@ -4144,8 +4144,8 @@
                                                                     </view>
                                                                 </subviews>
                                                             </stackView>
-                                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="xQq-kV-STK">
-                                                                <rect key="frame" x="0.0" y="108" width="345" height="120"/>
+                                                            <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="xQq-kV-STK">
+                                                                <rect key="frame" x="0.0" y="0.0" width="345" height="120"/>
                                                                 <subviews>
                                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="z41-Xa-Qx9">
                                                                         <rect key="frame" x="0.0" y="0.0" width="345" height="24"/>
@@ -5302,7 +5302,7 @@
                                                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s4g-tI-laC">
                                                         <rect key="frame" x="0.0" y="0.0" width="371" height="30"/>
                                                         <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Http://aminkitchen.co" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FSm-We-ei0">
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FSm-We-ei0">
                                                                 <rect key="frame" x="0.0" y="0.0" width="371" height="30"/>
                                                                 <fontDescription key="fontDescription" name="Inter-Regular_Medium" family="Inter" pointSize="14"/>
                                                                 <color key="textColor" name="ColorDarkBlue"/>
