--- a/Resturants/StroyBoard/Profile.storyboard
+++ b/Resturants/StroyBoard/Profile.storyboard
@@ -500,7 +500,7 @@
                                             </view>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jJU-Uy-9fQ">
                                                 <rect key="frame" x="0.0" y="1" width="393" height="200"/>
-                                                <color key="backgroundColor" name="ColorBlack"/>
+                                                <color key="backgroundColor" name="ColorDarkGray"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="200" id="2ct-XK-0wl"/>
                                                 </constraints>
@@ -529,9 +529,10 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6j4-CG-U9R">
                                                 <rect key="frame" x="0.0" y="161" width="393" height="120"/>
                                                 <subviews>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TfP-8N-Y1Q">
-                                                        <rect key="frame" x="16" y="0.0" width="120" height="120"/>
-                                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="TfP-8N-Y1Q">
+                                                        <rect key="frame" x="16" y="1.3333333333333357" width="120" height="117.33333333333331"/>
+                                                        <color key="backgroundColor" name="ColorDarkGray"/>
+                                                        <color key="tintColor" name="ColorWhite"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="120" id="aLE-a8-yHg"/>
                                                             <constraint firstAttribute="height" constant="120" id="kJ9-K8-miV"/>
@@ -4888,7 +4889,7 @@
                                             </view>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0ap-gT-xZQ">
                                                 <rect key="frame" x="0.0" y="1" width="393" height="240"/>
-                                                <color key="backgroundColor" name="ColorBlack"/>
+                                                <color key="backgroundColor" name="ColorDarkGray"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="240" id="X3T-sz-SK2"/>
                                                 </constraints>
@@ -4934,9 +4935,10 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tTj-de-ad8">
                                                 <rect key="frame" x="0.0" y="201" width="393" height="120"/>
                                                 <subviews>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OYY-Ez-pMv">
-                                                        <rect key="frame" x="16" y="0.0" width="120" height="120"/>
-                                                        <color key="backgroundColor" name="ColorBlack"/>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="OYY-Ez-pMv">
+                                                        <rect key="frame" x="16" y="1.3333333333333357" width="120" height="117.33333333333331"/>
+                                                        <color key="backgroundColor" name="ColorDarkGray"/>
+                                                        <color key="tintColor" name="ColorWhite"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="120" id="8jy-xN-dsc"/>
                                                             <constraint firstAttribute="width" constant="120" id="oc0-C8-ena"/>
@@ -10629,6 +10631,7 @@ platform be detailed.</string>
         <image name="location-pin" width="24" height="24"/>
         <image name="multiply" catalog="system" width="128" height="111"/>
         <image name="multiply.circle" catalog="system" width="128" height="123"/>
+        <image name="person" catalog="system" width="128" height="121"/>
         <image name="person.circle.fill" catalog="system" width="128" height="123"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="plus" catalog="system" width="128" height="113"/>
